--- a/resources/sass/admin/override.scss
+++ b/resources/sass/admin/override.scss
@@ -1,7 +1,8 @@
 //table
 .table-responsive {
-    -webkit-overflow-scrolling : auto !important;
+    -webkit-overflow-scrolling: auto !important;
 }
+
 .table {
     thead {
         border-bottom: 2px solid rgba($primary, .7);
@@ -9,6 +10,7 @@
         color: $primary;
         font-size: .95rem;
     }
+
     tbody,
     tfoot,
     tr,
@@ -16,12 +18,14 @@
     th {
         border-bottom: 1px solid grey !important;
     }
+
     tr:nth-child(2n) {
         background-color: $side-bg;
     }
 }
 
 .border-0.table-borderless {
+
     thead,
     tbody,
     tfoot,
@@ -31,5 +35,12 @@
         border-bottom: 0 !important;
         background-color: transparent !important;
         padding: .2rem 0;
+    }
+}
+
+//width
+@include media-breakpoint-down(sm) {
+    .w-sm-100 {
+        width: 100%;
     }
 }
