add vue and need to update styling

--- a/resources/sass/admin/index.scss
+++ b/resources/sass/admin/index.scss
@@ -1,6 +1,26 @@
 .help-text {
     font-size: 80%;
 }
+
 .help-text.mm-font {
     font-size: 65%;
+}
+
+// serch results
+.absolute-box {
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+}
+
+.results {
+    max-height: 150px;
+    overflow: auto;
+    .nav .nav-item .nav-link {
+        @include transition(all .3s linear);
+        color: $color;
+        &:hover {
+            background-color: $sidebar-dark;
+        }
+    }
 }
