--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -10,6 +10,9 @@ $secondary-dark: #9a0008;
 
 $sidebar: #e9f8ff;
 $side-bg: #f8f8fb;
+$sidebar-dark :#eeeef3;
+
+$color: #212529;
 
 $container-max-widths: (sm: 540px,
     md: 720px,
