--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -5,6 +5,7 @@
 @import "~bootstrap";
 
 @import './variable.scss';
+@import './_bootstrap.scss';
 
 @import './admin/header.scss';
 @import './admin/sidebar.scss';
