--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -11,6 +11,8 @@ $secondary-dark: #9a0008;
 $sidebar: #e9f8ff;
 $side-bg: #f8f8fb;
 
+$side-bg-dark: #f0f0f7;
+
 $container-max-widths: (sm: 540px,
     md: 720px,
     lg: 960px,
