--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -22398,21 +22398,24 @@ body {
   -webkit-overflow-scrolling: auto !important;
 }
 
+.table {
+  font-size: 0.9rem;
+}
 .table thead {
-  border-bottom: 2px solid rgba(12, 42, 160, 0.7);
-  border-top: 2px solid rgba(12, 42, 160, 0.7);
   color: #0c2aa0;
-  font-size: 0.95rem;
+  font-size: 0.85rem;
+  text-transform: uppercase;
+  background-color: #f8f8fb;
 }
 .table tbody,
 .table tfoot,
 .table tr,
 .table td,
 .table th {
-  border-bottom: 1px solid grey !important;
+  border-bottom: 1px solid #eeeef3 !important;
 }
-.table tr:nth-child(2n) {
-  background-color: #f8f8fb;
+.table tr:hover {
+  box-shadow: 0 0 5px 1px #d9d9db;
 }
 
 .border-0.table-borderless thead,
@@ -22472,4 +22475,9 @@ body {
 
 .page-title {
   font-weight: bold;
+}
+
+.featured-img {
+  max-width: 150px;
+  max-height: 75px;
 }
