--- a/resources/sass/admin/override.scss
+++ b/resources/sass/admin/override.scss
@@ -4,11 +4,12 @@
 }
 
 .table {
+    font-size: .9rem;
     thead {
-        border-bottom: 2px solid rgba($primary, .7);
-        border-top: 2px solid rgba($primary, .7);
         color: $primary;
-        font-size: .95rem;
+        font-size: .85rem;
+        text-transform: uppercase;
+        background-color: $side-bg;
     }
 
     tbody,
@@ -16,11 +17,11 @@
     tr,
     td,
     th {
-        border-bottom: 1px solid grey !important;
+        border-bottom: 1px solid $sidebar-dark !important;
     }
 
-    tr:nth-child(2n) {
-        background-color: $side-bg;
+    tr:hover {
+       box-shadow: 0 0 5px 1px #d9d9db;
     }
 }
 
