--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -9,12 +9,12 @@ $secondary-light:#ff6b5a;
 $secondary-dark: #9a0008;
 
 $sidebar: #e9f8ff;
-$side-bg: #f8f8fb;
+$side-bg: #f1f1f5;
 $sidebar-dark :#eeeef3;
 
 $color: #212529;
 
-$side-bg-dark: #f0f0f7;
+$side-bg-dark: #e6e6e9;
 
 $container-max-widths: (sm: 540px,
     md: 720px,
