--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -22224,7 +22224,7 @@ textarea.form-control-lg {
   width: 230px;
   overflow: auto;
   z-index: 10;
-  background-color: #f8f8fb;
+  background-color: #f1f1f5;
   transition: all 0.3s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -22405,7 +22405,7 @@ body {
   color: #0c2aa0;
   font-size: 0.85rem;
   text-transform: uppercase;
-  background-color: #f8f8fb;
+  background-color: #f1f1f5;
 }
 .table tbody,
 .table tfoot,
@@ -22435,7 +22435,7 @@ body {
   }
 }
 .bg-sidebar {
-  background-color: #f8f8fb;
+  background-color: #f1f1f5;
 }
 
 .help-text {
@@ -22480,4 +22480,50 @@ body {
 .featured-img {
   max-width: 150px;
   max-height: 75px;
+}
+
+.site-nav-tabs {
+  border-bottom: 3px solid #f1f1f5;
+}
+.site-nav-tabs .nav-item .nav-link {
+  position: relative;
+}
+.site-nav-tabs .nav-item .nav-link.active::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  background: #5653d2;
+  left: 0;
+  bottom: -3px;
+}
+
+.form-control, .form-select {
+  background-color: #f8f9fa;
+  font-size: 0.85rem;
+}
+
+.form-group {
+  margin-bottom: 10px;
+}
+.form-group label {
+  margin-bottom: 0.15rem;
+}
+
+.form-select {
+  padding: 0.25rem 2.25rem 0.25rem 0.75rem;
+}
+
+.help-text {
+  display: block;
+  margin-bottom: 0.5rem;
+  font-size: 0.75rem;
+}
+
+.bg-sidebar {
+  background-color: #f1f1f5;
+}
+
+.bg-sidebar-dark {
+  background-color: #e6e6e9;
 }
