--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -22332,6 +22332,7 @@ body {
   margin-top: 50px;
   padding: 1.5rem;
   background-color: #fafafa;
+  overflow-x: hidden;
   transition: all 0.3s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -22454,7 +22455,8 @@ body {
 
 .results {
   max-height: 150px;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 .results .nav .nav-item .nav-link {
   transition: all 0.3s linear;
