--- a/resources/sass/admin/content.scss
+++ b/resources/sass/admin/content.scss
@@ -36,8 +36,9 @@ body {
 .admin_app .app-content {
     min-height: calc(100vh - 50px);
     margin-top: 50px;
-    padding: 1.5rem;
+    padding: 1.5rem; 
     background-color: $body-bg;
+    overflow-x: hidden;
     @include transition(all .3s ease);
 }
 
