--- a/resources/sass/admin/content.scss
+++ b/resources/sass/admin/content.scss
@@ -68,3 +68,12 @@ body {
         background-color: $body-bg;
     }
 }
+
+//scroll
+body::-webkit-scrollbar, .smooth-scroll::-webkit-scrollbar {
+    width: 3px;
+}
+
+body::-webkit-scrollbar-thumb, .smooth-scroll::-webkit-scrollbar-thumb {
+    background-color: rgba(33, 37, 41, 0.2);
+}
