--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -25,3 +25,20 @@
         display: none !important;
     }
 }
+
+//filter content
+@media (max-width: 576px) {
+    .filter-content{
+        margin-left: -900px;
+        visibility: hidden;
+        opacity: 0;
+        transition: visibility 0s linear, opacity 0.5s;
+    }
+
+    .filter-content.filter-toggled {
+        margin-left: 0;
+        visibility: visible;
+        opacity: 1;
+        transition: visibility 0s linear, opacity 0.5s;                                        
+    }
+}
