--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -1,12 +1,20 @@
 $body-bg: #fafafa;
 
-$primary: #0c2aa0;
-$primary-light:#5653d2;
-$primary-dark: #000670;
+//$primary: #0c2aa0;
+//$primary-light:#5653d2;
+//$primary-dark: #000670;
 
-$secondary: #D33730;
-$secondary-light:#ff6b5a;
-$secondary-dark: #9a0008;
+$primary: #e73918;
+$primary-light: rgb(#e73918,.6);
+$primary-dark: #d72323;
+
+//$secondary: #D33730;
+//$secondary-light:#ff6b5a;
+//$secondary-dark: #9a0008;
+
+$secondary: #dddddd;
+$secondary-light:#eeeeee;
+$secondary-dark: #bbbbbb;
 
 $sidebar: #e9f8ff;
 $side-bg: #f1f1f5;
