--- a/resources/sass/admin/sidebar.scss
+++ b/resources/sass/admin/sidebar.scss
@@ -13,24 +13,29 @@
 }
 .app-menu__item {
     position: relative;
+    padding: 12px 18px !important;
     text-decoration: none;
     border-left: 3px solid transparent;
     @include transition(all .3s ease);
-    color: $primary;
+    color: $dark;
     font-size: .95rem;
 
     &:hover,
     &:focus,
     &.active {
-        background: $primary-dark;
-        border-left-color: $secondary;
+        //background: $primary-dark;
+        background: $primary-light;  /* fallback for old browsers */
+        background: -webkit-linear-gradient(to right, $primary-dark, $primary-light);  /* Chrome 10-25, Safari 5.1-6 */
+        background: linear-gradient(to right, $primary-dark, $primary-light); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+        border-left-color: $primary-dark;
         color: $white;
         .app-menu__icon { color: $white;}
     }
 
     .app-menu__icon {
         width: 25px;
-        color: rgba($primary, .75);
+        color: rgba($dark, .75);
     }
 }
 
@@ -56,7 +61,7 @@
 			left: 0;
 			width: 50px;
 			overflow: hidden;
-            
+
             .app-menu__label {
                 display: none;
             }
@@ -67,7 +72,7 @@
             .app-header-left-label {
                 display: none;
             }
-        }		
+        }
 	}
 }
 /* end sidebar */
