--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -1,5 +1,4 @@
 $body-bg: #fafafa;
-
 //$primary: #0c2aa0;
 //$primary-light:#5653d2;
 //$primary-dark: #000670;
@@ -12,9 +11,9 @@ $primary-dark: #d72323;
 //$secondary-light:#ff6b5a;
 //$secondary-dark: #9a0008;
 
-$secondary: #dddddd;
-$secondary-light:#eeeeee;
-$secondary-dark: #bbbbbb;
+$secondary: #787a91;
+$secondary-light:#555555;
+$secondary-dark: #333333;
 
 $sidebar: #e9f8ff;
 $side-bg: #f1f1f5;
