--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -57,6 +57,12 @@
     padding: 12px 15px !important;
 }
 
+.header-profile{
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+
 /* toast */
 .toast-container{
     transition: all 0.3s ease-in-out;
