--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -45,7 +45,8 @@
 
 .btn-primary,
 .btn-secondary,
-.btn-outline-primary:hover{
+.btn-outline-primary:hover,
+.btn-outline-secondary:hover{
     color: #fff !important;
 }
 
