--- a/resources/sass/admin/index.scss
+++ b/resources/sass/admin/index.scss
@@ -34,15 +34,31 @@
     font-weight: bold;
 }
 
+.sale-card{
+    height: 280px;
+    overflow: hidden;
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+.sale-card:hover{
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.sale-card:active{
+    background-color: $gray-400;
+}
+
 //image
 .featured-img {
     max-width: 150px;
     max-height: 75px;
-    transition: 0.4s;
 }
 
-.featured-img:hover{
-    transform: scale(1.5);
+.sale-img{
+    max-width: 100%;
+    max-height: 140px;
+    object-fit: cover;
 }
 
 //nav-tabs
