init change items-edit

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -21415,6 +21415,14 @@ body::-webkit-scrollbar-thumb, .smooth-scroll::-webkit-scrollbar-thumb {
   min-width: 65px;
 }
 
+.quantity-input {
+  width: 65px;
+}
+
+.pricing-input {
+  width: 120px;
+}
+
 .page-title {
   font-weight: bold;
 }
