--- a/resources/sass/admin/index.scss
+++ b/resources/sass/admin/index.scss
@@ -30,6 +30,12 @@
 .qty-input {
     min-width: 65px;
 }
+.quantity-input {
+    width: 65px;
+}
+.pricing-input {
+    width: 120px;
+}
 .page-title {
     font-weight: bold;
 }
