--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -21420,7 +21420,7 @@ body::-webkit-scrollbar-thumb, .smooth-scroll::-webkit-scrollbar-thumb {
 }
 
 .sale-card {
-  height: 280px;
+  height: 270px;
   overflow: hidden;
   transition: 0.5s;
   cursor: pointer;
@@ -21460,6 +21460,41 @@ body::-webkit-scrollbar-thumb, .smooth-scroll::-webkit-scrollbar-thumb {
   background: rgba(231, 57, 24, 0.6);
   left: 0;
   bottom: -3px;
+}
+
+.fade-enter-active, .fade-leave-active {
+  transition: all 0.4s ease-in;
+}
+
+.fade-enter-from, .fade-leave-to {
+  transform: scale(0.6);
+  opacity: 0;
+}
+
+.fade-enter-to, .fade-leave-from {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.fade-move {
+  transition: all 0.3s ease;
+}
+
+.switch-enter-from,
+.switch-leave-to {
+  opacity: 0;
+  transform: scale(0.6);
+}
+
+.switch-enter-to,
+.switch-leave-from {
+  opacity: 1;
+  transform: scale(1);
+}
+
+.switch-enter-active,
+.switch-leave-active {
+  transition: all 0.3s ease;
 }
 
 .form-control, .form-select {
