--- a/resources/sass/admin/index.scss
+++ b/resources/sass/admin/index.scss
@@ -35,7 +35,7 @@
 }
 
 .sale-card{
-    height: 280px;
+    height: 270px;
     overflow: hidden;
     transition: 0.5s;
     cursor: pointer;
@@ -80,4 +80,40 @@
             }
         }
     }
+}
+
+// card animation
+.fade-enter-active, .fade-leave-active {
+    transition: all .4s ease-in;
+}
+
+.fade-enter-from, .fade-leave-to {
+    transform: scale(0.6);
+    opacity: 0;
+}
+
+.fade-enter-to, .fade-leave-from {
+    transform: scale(1);
+    opacity: 1;
+}
+
+.fade-move{
+    transition: all 0.3s ease;
+}
+
+.switch-enter-from,
+.switch-leave-to{
+    opacity: 0;
+    transform: scale(0.6);
+}
+
+.switch-enter-to,
+.switch-leave-from{
+    opacity: 1;
+    transform: scale(1);
+}
+
+.switch-enter-active,
+.switch-leave-active{
+    transition: all .3s ease;
 }
