--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -64,6 +64,18 @@
     border-radius: 50%;
 }
 
+
+.paymentype-item {
+    margin-bottom: 10px;
+    margin-left: 5px;
+    border: 1px solid rgba(0, 0, 0, 0.4);
+}
+.paymentype-item.selected {
+    border: 2px solid #000;
+    font-weight: bold;
+}
+
+
 /* toast */
 .toast-container{
     transition: all 0.3s ease-in-out;
