update-price-information

--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -64,6 +64,11 @@
     border-radius: 50%;
 }
 
+.form-select{
+    padding: 0.57rem 2.25rem 0.57rem 0.75rem !important;
+    border-radius: 0.25rem !important;
+}
+
 
 .paymentype-item {
     margin-bottom: 10px;
