--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -21659,6 +21659,11 @@ body::-webkit-scrollbar-thumb, .smooth-scroll::-webkit-scrollbar-thumb {
   border-radius: 50%;
 }
 
+.form-select {
+  padding: 0.57rem 2.25rem 0.57rem 0.75rem !important;
+  border-radius: 0.25rem !important;
+}
+
 .paymentype-item {
   margin-bottom: 10px;
   margin-left: 5px;
