--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -3,15 +3,15 @@ $body-bg: #fafafa;
 //$primary-light:#5653d2;
 //$primary-dark: #000670;
 
-$primary: #e73918;
-$primary-light: rgb(#e73918,.6);
-$primary-dark: #d72323;
+$primary: #820000;
+$primary-light: rgb(#820000,.6);
+$primary-dark: #820000;
 
 //$secondary: #D33730;
 //$secondary-light:#ff6b5a;
 //$secondary-dark: #9a0008;
 
-$secondary: #787a91;
+$secondary: #212529;
 $secondary-light:#555555;
 $secondary-dark: #333333;
 
