--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10332,16 +10332,16 @@ readers do not read off random characters that represent icons */
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #e73918;
-  --bs-secondary: #787a91;
+  --bs-primary: #820000;
+  --bs-secondary: #212529;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
   --bs-warning: #ffc107;
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 231, 57, 24;
-  --bs-secondary-rgb: 120, 122, 145;
+  --bs-primary-rgb: 130, 0, 0;
+  --bs-secondary-rgb: 33, 37, 41;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
   --bs-warning-rgb: 255, 193, 7;
@@ -10371,8 +10371,8 @@ readers do not read off random characters that represent icons */
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #e73918;
-  --bs-link-hover-color: #b92e13;
+  --bs-link-color: #820000;
+  --bs-link-hover-color: #680000;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -12107,13 +12107,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #fad7d1;
-  --bs-table-border-color: #e1c2bc;
-  --bs-table-striped-bg: #eeccc7;
+  --bs-table-bg: #e6cccc;
+  --bs-table-border-color: #cfb8b8;
+  --bs-table-striped-bg: #dbc2c2;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #e1c2bc;
+  --bs-table-active-bg: #cfb8b8;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #e7c7c1;
+  --bs-table-hover-bg: #d5bdbd;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -12121,13 +12121,13 @@ progress {
 
 .table-secondary {
   --bs-table-color: #000;
-  --bs-table-bg: #e4e4e9;
-  --bs-table-border-color: #cdcdd2;
-  --bs-table-striped-bg: #d9d9dd;
+  --bs-table-bg: #d3d3d4;
+  --bs-table-border-color: #bebebf;
+  --bs-table-striped-bg: #c8c8c9;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #cdcdd2;
+  --bs-table-active-bg: #bebebf;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d3d3d8;
+  --bs-table-hover-bg: #c3c3c4;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -12313,9 +12313,9 @@ progress {
 .form-control:focus {
   color: #212529;
   background-color: #fafafa;
-  border-color: #f39c8c;
+  border-color: #c18080;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -12460,9 +12460,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #f39c8c;
+  border-color: #c18080;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -12540,13 +12540,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #f39c8c;
+  border-color: #c18080;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
 }
 .form-check-input:checked {
-  background-color: #e73918;
-  border-color: #e73918;
+  background-color: #820000;
+  border-color: #820000;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -12555,8 +12555,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #e73918;
-  border-color: #e73918;
+  background-color: #820000;
+  border-color: #820000;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -12586,7 +12586,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23f39c8c'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23c18080'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -12630,10 +12630,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fafafa, 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 1px #fafafa, 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fafafa, 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 1px #fafafa, 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -12642,7 +12642,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #e73918;
+  background-color: #820000;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -12657,7 +12657,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #f8c4ba;
+  background-color: #dab3b3;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -12671,7 +12671,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #e73918;
+  background-color: #820000;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -12686,7 +12686,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #f8c4ba;
+  background-color: #dab3b3;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -13136,37 +13136,37 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #e73918;
-  --bs-btn-border-color: #e73918;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #eb573b;
-  --bs-btn-hover-border-color: #e94d2f;
-  --bs-btn-focus-shadow-rgb: 196, 48, 20;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #ec6146;
-  --bs-btn-active-border-color: #e94d2f;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #820000;
+  --bs-btn-border-color: #820000;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #6f0000;
+  --bs-btn-hover-border-color: #680000;
+  --bs-btn-focus-shadow-rgb: 149, 38, 38;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #680000;
+  --bs-btn-active-border-color: #620000;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #e73918;
-  --bs-btn-disabled-border-color: #e73918;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #820000;
+  --bs-btn-disabled-border-color: #820000;
 }
 
 .btn-secondary {
-  --bs-btn-color: #000;
-  --bs-btn-bg: #787a91;
-  --bs-btn-border-color: #787a91;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #8c8ea2;
-  --bs-btn-hover-border-color: #86879c;
-  --bs-btn-focus-shadow-rgb: 102, 104, 123;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #9395a7;
-  --bs-btn-active-border-color: #86879c;
+  --bs-btn-color: #fff;
+  --bs-btn-bg: #212529;
+  --bs-btn-border-color: #212529;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #1c1f23;
+  --bs-btn-hover-border-color: #1a1e21;
+  --bs-btn-focus-shadow-rgb: 66, 70, 73;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #1a1e21;
+  --bs-btn-active-border-color: #191c1f;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #000;
-  --bs-btn-disabled-bg: #787a91;
-  --bs-btn-disabled-border-color: #787a91;
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: #212529;
+  --bs-btn-disabled-border-color: #212529;
 }
 
 .btn-success {
@@ -13272,36 +13272,36 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #e73918;
-  --bs-btn-border-color: #e73918;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #e73918;
-  --bs-btn-hover-border-color: #e73918;
-  --bs-btn-focus-shadow-rgb: 231, 57, 24;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #e73918;
-  --bs-btn-active-border-color: #e73918;
+  --bs-btn-color: #820000;
+  --bs-btn-border-color: #820000;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #820000;
+  --bs-btn-hover-border-color: #820000;
+  --bs-btn-focus-shadow-rgb: 130, 0, 0;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #820000;
+  --bs-btn-active-border-color: #820000;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #e73918;
+  --bs-btn-disabled-color: #820000;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #e73918;
+  --bs-btn-disabled-border-color: #820000;
   --bs-gradient: none;
 }
 
 .btn-outline-secondary {
-  --bs-btn-color: #787a91;
-  --bs-btn-border-color: #787a91;
-  --bs-btn-hover-color: #000;
-  --bs-btn-hover-bg: #787a91;
-  --bs-btn-hover-border-color: #787a91;
-  --bs-btn-focus-shadow-rgb: 120, 122, 145;
-  --bs-btn-active-color: #000;
-  --bs-btn-active-bg: #787a91;
-  --bs-btn-active-border-color: #787a91;
+  --bs-btn-color: #212529;
+  --bs-btn-border-color: #212529;
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #212529;
+  --bs-btn-hover-border-color: #212529;
+  --bs-btn-focus-shadow-rgb: 33, 37, 41;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #212529;
+  --bs-btn-active-border-color: #212529;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #787a91;
+  --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #787a91;
+  --bs-btn-disabled-border-color: #212529;
   --bs-gradient: none;
 }
 
@@ -13419,7 +13419,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
-  --bs-btn-focus-shadow-rgb: 196, 48, 20;
+  --bs-btn-focus-shadow-rgb: 149, 38, 38;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -13526,7 +13526,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #1e2125;
   --bs-dropdown-link-hover-bg: #e9ecef;
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #e73918;
+  --bs-dropdown-link-active-bg: #820000;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -13791,7 +13791,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #e73918;
+  --bs-dropdown-link-active-bg: #820000;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -13974,7 +13974,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #e73918;
+  --bs-nav-pills-link-active-bg: #820000;
 }
 .nav-pills .nav-link {
   background: none;
@@ -14637,13 +14637,13 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23d03316'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #f39c8c;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23750000'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-border-color: #c18080;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: #d03316;
-  --bs-accordion-active-bg: #fdebe8;
+  --bs-accordion-active-color: #750000;
+  --bs-accordion-active-bg: #f3e6e6;
 }
 
 .accordion-button {
@@ -14802,10 +14802,10 @@ textarea.form-control-lg {
   --bs-pagination-hover-border-color: #dee2e6;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: #e9ecef;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #e73918;
-  --bs-pagination-active-border-color: #e73918;
+  --bs-pagination-active-bg: #820000;
+  --bs-pagination-active-border-color: #820000;
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -14947,21 +14947,21 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  --bs-alert-color: #8b220e;
-  --bs-alert-bg: #fad7d1;
-  --bs-alert-border-color: #f8c4ba;
+  --bs-alert-color: #4e0000;
+  --bs-alert-bg: #e6cccc;
+  --bs-alert-border-color: #dab3b3;
 }
 .alert-primary .alert-link {
-  color: #6f1b0b;
+  color: #3e0000;
 }
 
 .alert-secondary {
-  --bs-alert-color: #484957;
-  --bs-alert-bg: #e4e4e9;
-  --bs-alert-border-color: #d7d7de;
+  --bs-alert-color: #141619;
+  --bs-alert-bg: #d3d3d4;
+  --bs-alert-border-color: #bcbebf;
 }
 .alert-secondary .alert-link {
-  color: #3a3a46;
+  color: #101214;
 }
 
 .alert-success {
@@ -15030,7 +15030,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: 0.375rem;
   --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #e73918;
+  --bs-progress-bar-bg: #820000;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -15087,8 +15087,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #fff;
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #e73918;
-  --bs-list-group-active-border-color: #e73918;
+  --bs-list-group-active-bg: #820000;
+  --bs-list-group-active-border-color: #820000;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -15311,31 +15311,31 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #8b220e;
-  background-color: #fad7d1;
+  color: #4e0000;
+  background-color: #e6cccc;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #8b220e;
-  background-color: #e1c2bc;
+  color: #4e0000;
+  background-color: #cfb8b8;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #8b220e;
-  border-color: #8b220e;
+  background-color: #4e0000;
+  border-color: #4e0000;
 }
 
 .list-group-item-secondary {
-  color: #484957;
-  background-color: #e4e4e9;
+  color: #141619;
+  background-color: #d3d3d4;
 }
 .list-group-item-secondary.list-group-item-action:hover, .list-group-item-secondary.list-group-item-action:focus {
-  color: #484957;
-  background-color: #cdcdd2;
+  color: #141619;
+  background-color: #bebebf;
 }
 .list-group-item-secondary.list-group-item-action.active {
   color: #fff;
-  background-color: #484957;
-  border-color: #484957;
+  background-color: #141619;
+  border-color: #141619;
 }
 
 .list-group-item-success {
@@ -15440,7 +15440,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(231, 57, 24, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(130, 0, 0, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -16946,13 +16946,13 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #000 !important;
-  background-color: RGBA(231, 57, 24, var(--bs-bg-opacity, 1)) !important;
+  color: #fff !important;
+  background-color: RGBA(130, 0, 0, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
-  color: #000 !important;
-  background-color: RGBA(120, 122, 145, var(--bs-bg-opacity, 1)) !important;
+  color: #fff !important;
+  background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-success {
@@ -16986,17 +16986,17 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #e73918 !important;
+  color: #820000 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #ec6146 !important;
+  color: #680000 !important;
 }
 
 .link-secondary {
-  color: #787a91 !important;
+  color: #212529 !important;
 }
 .link-secondary:hover, .link-secondary:focus {
-  color: #9395a7 !important;
+  color: #1a1e21 !important;
 }
 
 .link-success {
