--- a/resources/sass/variable.scss
+++ b/resources/sass/variable.scss
@@ -6,6 +6,7 @@ $body-bg: #fafafa;
 $primary: #820000;
 $primary-light: rgb(#820000,.6);
 $primary-dark: #820000;
+$btn-font-size: 0.9rem;
 
 //$secondary: #D33730;
 //$secondary-light:#ff6b5a;
