--- a/resources/sass/admin.scss
+++ b/resources/sass/admin.scss
@@ -58,6 +58,10 @@
     color: #fff !important;
 }
 
+.stock:hover{
+    color: white !important;
+}
+
 .table tr:hover{
     box-shadow: none !important;
 }
